src/test/ui/issues/issue-31076.stderr
error[E0369]: binary operation `+` cannot be applied to type `{integer}`
  --> $DIR/issue-31076.rs:13:15
   |
LL |     let x = 5 + 6;
   |             - ^ - {integer}
   |             |
   |             {integer}
   |
   = note: an implementation of `std::ops::Add` might be missing for `{integer}`

error[E0369]: binary operation `+` cannot be applied to type `i32`
  --> $DIR/issue-31076.rs:15:18
   |
LL |     let y = 5i32 + 6i32;
   |             ---- ^ ---- i32
   |             |
   |             i32
   |
   = note: an implementation of `std::ops::Add` might be missing for `i32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0369`.
